k8s/digital-ocean/hellok8s.yml
apiVersion: v1
kind: Service
metadata:
  name: hellok8s-svc
spec:
  type: ClusterIP
  selector:
    app: hellok8s
  ports:
    - port: 4567
      targetPort: 4567

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellok8s
spec:
  replicas: 10
  selector:
    matchLabels:
      app: hellok8s
  template:
    metadata:
      labels:
        app: hellok8s
    spec:
      containers:
        - image: jnopnop/hellok8s:v4
          name: hellok8s-container
